--- a/.gitignore
+++ b/.gitignore
@@ -23,31 +23,31 @@
 hs_err_pid*
 
 ##.idea/*
-#.idea/**/workspace.xml
-#.idea/**/tasks.xml
-#.idea/**/usage.statistics.xml
-#.idea/**/dictionaries
-#.idea/**/shelf
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
-#.idea/**/contentModel.xml
+.idea/**/contentModel.xml
 
 # Sensitive or high-churn files
-#.idea/**/dataSources/
-#.idea/**/dataSources.ids
-#.idea/**/dataSources.local.xml
-#.idea/**/sqlDataSources.xml
-#.idea/**/dynamic.xml
-#.idea/**/uiDesigner.xml
-#.idea/**/dbnavigator.xml
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
 
-#.idea/**/gradle.xml
-#.idea/**/libraries
+.idea/**/gradle.xml
+.idea/**/libraries
 
 cmake-build-*/
 
 out/
 
-#.idea/httpRequests
+.idea/httpRequests
 
 *.swp
 *.swo
